fixed mobile layout bug

--- a/portfolio.css
+++ b/portfolio.css
@@ -13,7 +13,7 @@
 
 .landing {
   flex-flow: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .jumbotron p:last-child {
